--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Vite + React + TS</title>
     <link rel="stylesheet" href="/WEB/css/clash-display.css"/>
+    <link rel="stylesheet" href="/general-sans/css/general-sans.css"/>
+
   </head>
-  <body>
-    <div id="root"></div>
+  <body class="w-full h-full pink-theme">
+    <div id="root" class="w-screen h-screen"></div>
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
