--- a/index.html
+++ b/index.html
@@ -1,16 +1,19 @@
 <!doctype html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Vite + React + TS</title>
-    <link rel="stylesheet" href="/WEB/css/clash-display.css"/>
-    <link rel="stylesheet" href="/general-sans/css/general-sans.css"/>
 
-  </head>
-  <body class="w-full h-full pink-theme">
-    <div id="root" class="w-screen h-screen"></div>
-    <script type="module" src="/src/main.tsx"></script>
-  </body>
+<head>
+  <meta charset="UTF-8" />
+  <link rel="icon" type="image/svg+xml" href="/vite.svg" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Vite + React + TS</title>
+  <link rel="stylesheet" href="/WEB/css/clash-display.css" />
+  <link rel="stylesheet" href="/general-sans/css/general-sans.css" />
+
+</head>
+
+<body class="pink-theme">
+  <div id="root" class="w-screen h-screen"></div>
+  <script type="module" src="/src/main.tsx"></script>
+</body>
+
 </html>
